--- a/CybersecurityProject450.html
+++ b/CybersecurityProject450.html
@@ -19,7 +19,7 @@ Hello, Please review my html code. Thanks
                     Ultimate this website should improve anyone's confidence and ability to make good cyber choices and stay safe in cyberspace. </p>
                     <p style= "color:white; background-color:rgb(9, 7, 126)"><b> NAU CIT Information</b></p>             
                     <a href= "https://catalog.nau.edu/Catalog/details?plan=PLCITBA"><button>Computer Information Technology, Bachelor of Arts</button> </a> 
-                    <a href= "https://catalog.nau.edu/Catalog/details?plan=PLCITBS&mobile=true"><button>Computer Information Technology, Bachelor of Science</button> </a> 
+                    <a href= "https://catalog.nau.edu/Catalog/details?plan=PLCITBS&mobile=true"><button>Computer Information Technology, Bachelor of Science</button> 
                     <hr/>    
                            <br>
                        
